infra/k8s/account-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: cardozoalani/account-service
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3001'
    prometheus.io/path: '/metrics'
spec:
  type: ClusterIP
  selector:
    app: account-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
