infra/k8s/transaction-compliance-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-compliance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-compliance-service
  template:
    metadata:
      labels:
        app: transaction-compliance-service
    spec:
      containers:
        - name: transaction-compliance-service
          image: cardozoalani/transaction-compliance-service
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-compliance-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3002'
    prometheus.io/path: '/metrics'
spec:
  type: ClusterIP
  selector:
    app: transaction-compliance-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
