infra/k8s/transaction-processor-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-processor-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-processor-api
  template:
    metadata:
      labels:
        app: transaction-processor-api
    spec:
      containers:
        - name: transaction-processor-api
          image: cardozoalani/transaction-processor-api
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-processor-api
spec:
  type: LoadBalancer
  selector:
    app: transaction-processor-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
