infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: processor.transactions.local
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: transaction-processor-api
                port:
                  number: 3000
    - host: account.transactions.local
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: account-service
                port:
                  number: 3001
    - host: compliance.transactions.local
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: transaction-compliance-service
                port:
                  number: 3002
    - host: localstack.transactions.local
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: localstack
                port:
                  number: 4566
